<resources>
    <string name="app_name">AgroVision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen">splashscreen</string>
    <string name="logo_name">logo_name</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukkan Email</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="sign_up_now">Belum mempunyai akun ? Sign Up</string>
    <string name="onboard_get_started">Mulai</string>
    <string name="onboard">onboard</string>
    <string name="started">Ayo kita mulai!</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Nama</string>
    <string name="hint_name">Masukkan nama</string>
    <string name="hint_password">Masukkan password</string>
    <string name="signin_now">Sudah mempunyai akun ? Sign In</string>
    <string name="disease_title">Penyakit A</string>
    <string name="plant_title">Tanaman A</string>
    <string name="result_percentage">95.62%</string>
    <string name="result_description">Deskripsi</string>
    <string name="result_description_text">Lorem ipsum dolor sit amet consectetur. Quis commodo pulvinar sed nulla nunc. Hendrerit gravida pharetra cursus erat dictum ipsum fusce facilisis. Amet curabitur neque blandit elementum scelerisque. Urna eu turpis adipiscing vel amet. Tristique pellentesque risus neque semper. Amet et mi volutpat cursus nulla cras interdum. Quis arcu vivamus amet at vulputate.</string>
    <string name="select_fruit">Silakan pilih buah yang ingin dicek kematangannya</string>
    <string name="select_plant">Silakan pilih tanaman yang ingin diperiksa penyakitnya</string>
    <string name="greet">Halo, <b>%1$s!</b></string>
    <string name="hello_greeting">Bagaimana kabarmu hari ini?</string>
    <string name="detection">Deteksi</string>
    <string name="detection_text">Cara mudah untuk mengetahui apakah buah sudah matang dan mendeteksi penyakit dari tanaman. \n\nCoba AgroVision sekarang!</string>
    <string name="detect_now">Deteksi Sekarang</string>
    <string name="article">Artikel</string>
    <string name="article_now">Kumpulan artikel bermanfaat seputar tanaman</string>
    <string name="edit">Edit</string>
    <string name="name">Nama</string>
    <string name="nama_placeholder">Rama Ramadhan</string>
    <string name="email_placeholder">ramahtamah@gmail.com</string>
    <string name="password_placeholder">12345678</string>
    <string name="sign_out">Sign Out</string>
    <string name="article_title">Judul Artikel</string>
    <string name="article_desc">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="fruit">Pisang</string>
    <string name="plant">Padi</string>
    <string name="date">01/06/2023</string>
    <string name="history_title">Penyakit/Kematangan</string>
    <string name="history_desc">Lorem ipsum dolor sit amet consectetur.</string>
    <string name="password_invalid">Minimal kata sandi terdiri dari 8 karakter</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="logout">Keluar</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="msg_success_reset">Link reset password telah dikirim ke email</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="save_changes">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="msg_failed_changes_name">Gagal mengubah nama</string>
    <string name="allow_permission">Mohon berikan izin akses kamera pada pengaturan</string>
    <string name="upload">Upload</string>
    <string name="preview">Preview</string>
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="tanggal">14/06/2023</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="camera">Camera</string>
</resources>