<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fari.agrovision.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
<!--    <fragment-->
<!--        android:id="@+id/navigation_history"-->
<!--        android:name="com.fari.agrovision.ui.history.HistoryFragment"-->
<!--        android:label="@string/history"-->
<!--        tools:layout="@layout/fragment_history" />-->
    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.fari.agrovision.ui.detection.DetectionFragment"
        android:label="@string/detection"
        tools:layout="@layout/fragment_detection" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.fari.agrovision.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>